force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Need_Advanced_Rough_In_Dwg_s__c.field-meta.xml
<CustomField>
    <fullName>Need_Advanced_Rough_In_Dwg_s__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Advanced Rough-In-Dwg&apos;s</label>
    <type>Checkbox</type>
</CustomField>