force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Need_Advanced_Rough_In_Dwg_s_Cmpt_Date__c.field-meta.xml
<CustomField>
    <fullName>Need_Advanced_Rough_In_Dwg_s_Cmpt_Date__c</fullName>
    <label>Need Advanced Rough-In-Dwg&apos;s Cmpt Date</label>
    <type>Date</type>
</CustomField>