force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Need_Critical_Part_Lists_Completed__c.field-meta.xml
<CustomField>
    <fullName>Need_Critical_Part_Lists_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Critical Part Lists Completed</label>
    <type>Checkbox</type>
</CustomField>