force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Need_Critical_Part_Lists_Date__c.field-meta.xml
<CustomField>
    <fullName>Need_Critical_Part_Lists_Date__c</fullName>
    <label>Need Critical Part Lists Date</label>
    <type>Date</type>
</CustomField>