force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/New_Construction__c.field-meta.xml
<CustomField>
    <fullName>New_Construction__c</fullName>
    <label>Required Construction</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>LIfts Only</fullName>
                <default>true</default>
                <label>LIfts Only</label>
            </value>
            <value>
                <fullName>Remodel</fullName>
            </value>
            <value>
                <fullName>New Construction</fullName>
            </value>
            <value>
                <fullName>Unknown</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>