force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/New_Request_Quote__c.field-meta.xml
<CustomField>
    <fullName>New_Request_Quote__c</fullName>
    <label>1 New Request</label>
    <type>Date</type>
</CustomField>