force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Notched_out_door_header__c.field-meta.xml
<CustomField>
    <fullName>Notched_out_door_header__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this design requires the door header to be notched out.</description>
    <inlineHelpText>Check if this design requires the door header to be notched out.</inlineHelpText>
    <label>Notched out door header</label>
    <type>Checkbox</type>
</CustomField>