force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Opp_Stage__c.field-meta.xml
<CustomField>
    <fullName>Opp_Stage__c</fullName>
    <formula>Text(Opportunity__r.StageName)</formula>
    <label>Opp Stage</label>
    <type>Text</type>
</CustomField>