force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipName>AP_and_LIKO_Orders_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>