force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Order__c.field-meta.xml
<CustomField>
    <fullName>Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order</label>
    <referenceTo>Order__c</referenceTo>
    <relationshipName>AP_and_LINKO_Orders_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>