force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Order_Id__c.field-meta.xml
<CustomField>
    <fullName>Order_Id__c</fullName>
    <description>This field is the unique identifier for the order. It is used to establish the 1 to 1 relationship with the the Order object</description>
    <label>Order Id</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>