force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Order_Lines_Released__c.field-meta.xml
<CustomField>
    <fullName>Order_Lines_Released__c</fullName>
    <label>5 Order Lines Rlsd Dt</label>
    <type>Date</type>
</CustomField>