force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Order_Number__c.field-meta.xml
<CustomField>
    <fullName>Order_Number__c</fullName>
    <label>Order Number</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>