force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Order_Stage__c.field-meta.xml
<CustomField>
    <fullName>Order_Stage__c</fullName>
    <label>Order Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 CRM Rcvd</fullName>
            </value>
            <value>
                <fullName>2 Shop Dwgs Sent</fullName>
            </value>
            <value>
                <fullName>3 Approvals Sent to PM</fullName>
            </value>
            <value>
                <fullName>4 Need Adtl Info From SE</fullName>
            </value>
            <value>
                <fullName>5 Drafting</fullName>
            </value>
            <value>
                <fullName>6 PM Pre-Release</fullName>
            </value>
            <value>
                <fullName>7 Prod Engr</fullName>
            </value>
            <value>
                <fullName>8 Rlsd to Agile</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>