force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Order_Stage_Liko__c.field-meta.xml
<CustomField>
    <fullName>Order_Stage_Liko__c</fullName>
    <label>Order Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0 CRM Rcvd</fullName>
            </value>
            <value>
                <fullName>1 Shop Dwgs Sent</fullName>
            </value>
            <value>
                <fullName>2 Site Conditions Confirmed</fullName>
            </value>
            <value>
                <fullName>3 Approvals Rcv&apos;d</fullName>
            </value>
            <value>
                <fullName>4 Need Adtl Info from MBS</fullName>
            </value>
            <value>
                <fullName>5 Order Lines Released</fullName>
            </value>
            <value>
                <fullName>6 Installation Complete</fullName>
            </value>
            <value>
                <fullName>7 Project Closed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>