force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Other__c.field-meta.xml
<CustomField>
    <fullName>Other__c</fullName>
    <label>Other:</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>