force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Other_Accessories__c.field-meta.xml
<CustomField>
    <fullName>Other_Accessories__c</fullName>
    <description>Describe other accessories that are needed ... slings, etc.</description>
    <inlineHelpText>Describe other accessories that are needed ... slings, etc.</inlineHelpText>
    <label>Other Accessories</label>
    <type>TextArea</type>
</CustomField>