force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Other_height_explain__c.field-meta.xml
<CustomField>
    <fullName>Other_height_explain__c</fullName>
    <label>Other (height &amp; explain)</label>
    <length>255</length>
    <type>Text</type>
</CustomField>