force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/OTP_Description__c.field-meta.xml
<CustomField>
    <fullName>OTP_Description__c</fullName>
    <label>Q&amp;O Desc</label>
    <length>60</length>
    <type>Text</type>
</CustomField>