force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/PE_Product_Drafting__c.field-meta.xml
<CustomField>
    <fullName>PE_Product_Drafting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>5. PE - Product Drafting</label>
    <type>Checkbox</type>
</CustomField>