force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/PE_Product_Drafting_Date__c.field-meta.xml
<CustomField>
    <fullName>PE_Product_Drafting_Date__c</fullName>
    <label>5 Product Drafting Dt</label>
    <type>Date</type>
</CustomField>