force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/PE_Product_Drafting_User__c.field-meta.xml
<CustomField>
    <fullName>PE_Product_Drafting_User__c</fullName>
    <label>5. PE - Product Drafting User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>