force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/PE_Product_Engineering__c.field-meta.xml
<CustomField>
    <fullName>PE_Product_Engineering__c</fullName>
    <defaultValue>false</defaultValue>
    <label>7. PE - Product Engineering</label>
    <type>Checkbox</type>
</CustomField>