force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/PE_Stamp_Req_d__c.field-meta.xml
<CustomField>
    <fullName>PE_Stamp_Req_d__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Critical early in the process: check this box if a Professional Engr&apos;s stamp is required (sealed or stamped drawings).</inlineHelpText>
    <label>ENG Stamp Req&apos;d</label>
    <type>Checkbox</type>
</CustomField>