force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/PE_Stamp_Type__c.field-meta.xml
<CustomField>
    <fullName>PE_Stamp_Type__c</fullName>
    <inlineHelpText>All have Signed/Sealed Letters
BASIC:  Hill-Rom LIKO system &amp; components, by design, meets standards
STANDARD: Similar to BASIC, with design of attachment details based upon specific job conditions
CUSTOM:  Site-Specific shop drawings and calculations</inlineHelpText>
    <label>PE Stamp Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Basic</fullName>
            </value>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Custom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>