force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Pendant_Length__c.field-meta.xml
<CustomField>
    <fullName>Pendant_Length__c</fullName>
    <label>Pendant Length</label>
    <length>10</length>
    <type>Text</type>
</CustomField>