force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/PM_Pre_Release__c.field-meta.xml
<CustomField>
    <fullName>PM_Pre_Release__c</fullName>
    <defaultValue>false</defaultValue>
    <label>6. PM - Pre-Release</label>
    <type>Checkbox</type>
</CustomField>