force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/PM_Pre_Release_Date__c.field-meta.xml
<CustomField>
    <fullName>PM_Pre_Release_Date__c</fullName>
    <label>6 PM Pre-Release Dt</label>
    <type>Date</type>
</CustomField>