force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/PM_Pre_Release_User__c.field-meta.xml
<CustomField>
    <fullName>PM_Pre_Release_User__c</fullName>
    <label>6. PM - Pre-Release User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>