force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <inlineHelpText>Enter the project number (Project Mgr&apos;s).</inlineHelpText>
    <label>Project #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>