force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Project_Closed_Liko__c.field-meta.xml
<CustomField>
    <fullName>Project_Closed_Liko__c</fullName>
    <label>7 Project Closed</label>
    <type>Date</type>
</CustomField>