force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Project_Management_Note__c.field-meta.xml
<CustomField>
    <fullName>Project_Management_Note__c</fullName>
    <label>Notes from Project Management</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>