force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Proposal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Proposal_Contact__c</fullName>
    <formula>Opportunity__r.Proposal_Contact__r.FirstName   &amp; &quot; &quot; &amp;  Opportunity__r.Proposal_Contact__r.LastName   &amp; &quot; &quot;  &amp;  Opportunity__r.Proposal_Contact__r.Email</formula>
    <label>Proposal Contact</label>
    <type>Text</type>
</CustomField>