force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Qty_of_Lift_Systems__c.field-meta.xml
<CustomField>
    <fullName>Qty_of_Lift_Systems__c</fullName>
    <inlineHelpText>Provide Quantity Breakdown in Sales Notes Section</inlineHelpText>
    <label>Qty of Lift Systems</label>
    <length>20</length>
    <type>Text</type>
</CustomField>