force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Quick_Release_Carriage__c.field-meta.xml
<CustomField>
    <fullName>Quick_Release_Carriage__c</fullName>
    <description>Check if this design requires a quick release carriage for lift motor.</description>
    <inlineHelpText>Check if this design requires a quick release carriage for lift motor.</inlineHelpText>
    <label>Motor Carriage Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>QR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>