force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Quote_Completed__c.field-meta.xml
<CustomField>
    <fullName>Quote_Completed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Completed</label>
    <type>Checkbox</type>
</CustomField>