force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Quote_In_Review_SPR__c.field-meta.xml
<CustomField>
    <fullName>Quote_In_Review_SPR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Review: SPR</label>
    <type>Checkbox</type>
</CustomField>