force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Quote_Need_Adtl_Info__c.field-meta.xml
<CustomField>
    <fullName>Quote_Need_Adtl_Info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Need Adtl Info</label>
    <type>Checkbox</type>
</CustomField>