force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Quote_New_Request__c.field-meta.xml
<CustomField>
    <fullName>Quote_New_Request__c</fullName>
    <defaultValue>true</defaultValue>
    <label>New Request</label>
    <type>Checkbox</type>
</CustomField>