force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Quote_Owner__c.field-meta.xml
<CustomField>
    <fullName>Quote_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>AP_and_LIKO_Orders_Tracking</relationshipName>
    <type>Lookup</type>
</CustomField>