force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Quote_Stage__c.field-meta.xml
<CustomField>
    <fullName>Quote_Stage__c</fullName>
    <label>Quote Stage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1 New Request</fullName>
                <default>true</default>
                <label>1 New Request</label>
            </value>
            <value>
                <fullName>2 In Review</fullName>
            </value>
            <value>
                <fullName>3 In Review - Special</fullName>
                <label>3 Pending Install / Eng Pricing</label>
            </value>
            <value>
                <fullName>4 Need Adtl Info</fullName>
            </value>
            <value>
                <fullName>4.5 Resubmitted</fullName>
            </value>
            <value>
                <fullName>5 Completed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>