force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Quoted_w_Pending_SPR__c.field-meta.xml
<CustomField>
    <fullName>Quoted_w_Pending_SPR__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Project Mgr to check this box if a quote was provided on a configuration that is still pending approval by the Specials Committee.</description>
    <inlineHelpText>Project Mgr to check this box if a quote was provided on a configuration that is still pending approval by the Specials Committee.</inlineHelpText>
    <label>Quoted w/ Pending SPR</label>
    <type>Checkbox</type>
</CustomField>