force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Rail_Supports__c.field-meta.xml
<CustomField>
    <fullName>Rail_Supports__c</fullName>
    <formula>HYPERLINK(&quot;https://hill-rom--hrctest.my.salesforce.com/sfc/p/#E0000000KMt9/a/E00000004g57/9h_2G_.UopxEy9MkeTTSjtzzHERs3tzAP8BrAHpIfko&quot;,&quot;Click to view Image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Rail Supports</label>
    <type>Text</type>
</CustomField>