force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Rail_System__c.field-meta.xml
<CustomField>
    <fullName>Rail_System__c</fullName>
    <inlineHelpText>Select the rail design.</inlineHelpText>
    <label>Rail System</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Single Rail</fullName>
                <label>Single Straight Rail</label>
            </value>
            <value>
                <fullName>Traverse</fullName>
            </value>
            <value>
                <fullName>Bariatric Straight</fullName>
            </value>
            <value>
                <fullName>Bariatric Traverse</fullName>
            </value>
            <value>
                <fullName>Traverse w/ Toilet</fullName>
            </value>
            <value>
                <fullName>Traverse w/ Bathroom</fullName>
            </value>
            <value>
                <fullName>Straight Rail w/ Bathroom</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>