force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Raised_Trav_Rail_Carrier__c.field-meta.xml
<CustomField>
    <fullName>Raised_Trav_Rail_Carrier__c</fullName>
    <inlineHelpText>Check if this system requires raised traverse rail carriers.</inlineHelpText>
    <label>Type Trav Rail Carrier</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Raised</fullName>
            </value>
            <value>
                <fullName>Lowered</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>