force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Recessed_Rails__c.field-meta.xml
<CustomField>
    <fullName>Recessed_Rails__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if this design requires recessed rails.</description>
    <inlineHelpText>Check if this design requires recessed rails.</inlineHelpText>
    <label>Recessed Rails</label>
    <type>Checkbox</type>
</CustomField>