force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Requested_Due_Dt__c.field-meta.xml
<CustomField>
    <fullName>Requested_Due_Dt__c</fullName>
    <inlineHelpText>Please enter the date by which you would like the quote returned.</inlineHelpText>
    <label>Requested Due Dt</label>
    <type>Date</type>
</CustomField>