force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Revised_Shop_Drawings_Sent__c.field-meta.xml
<CustomField>
    <fullName>Revised_Shop_Drawings_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>3. Revised Shop Drawings Sent</label>
    <type>Checkbox</type>
</CustomField>