force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Revised_Shop_Drawings_Sent_User__c.field-meta.xml
<CustomField>
    <fullName>Revised_Shop_Drawings_Sent_User__c</fullName>
    <label>3. Revised Shop Drawings Sent User</label>
    <length>80</length>
    <type>Text</type>
</CustomField>