force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Sales_Note__c.field-meta.xml
<CustomField>
    <fullName>Sales_Note__c</fullName>
    <label>Notes From Sales</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>