force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Ship_to_Name__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Name__c</fullName>
    <formula>Opportunity__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship to Name</label>
    <type>Text</type>
</CustomField>