force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Ship_to_Number__c.field-meta.xml
<CustomField>
    <fullName>Ship_to_Number__c</fullName>
    <formula>Order__r.Account__r.JDE_External_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ship to Number</label>
    <type>Text</type>
</CustomField>