force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Shop_Drawings_Sent__c.field-meta.xml
<CustomField>
    <fullName>Shop_Drawings_Sent__c</fullName>
    <defaultValue>false</defaultValue>
    <label>2. Shop Drawings Sent</label>
    <type>Checkbox</type>
</CustomField>