force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Shop_Drawings_Sent_Date__c.field-meta.xml
<CustomField>
    <fullName>Shop_Drawings_Sent_Date__c</fullName>
    <label>2 Shop Dwgs Sent Dt</label>
    <type>Date</type>
</CustomField>