force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Site_Conditions_Confirmed_Liko__c.field-meta.xml
<CustomField>
    <fullName>Site_Conditions_Confirmed_Liko__c</fullName>
    <label>2 Site Conditions Confirmed Dt</label>
    <type>Date</type>
</CustomField>