force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Slimline__c.field-meta.xml
<CustomField>
    <fullName>Slimline__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Slimline</label>
    <type>Checkbox</type>
</CustomField>