force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/SlingBar_Attach_Type__c.field-meta.xml
<CustomField>
    <fullName>SlingBar_Attach_Type__c</fullName>
    <label>SlingBar Attach Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bolt-On</fullName>
            </value>
            <value>
                <fullName>Quick-Release</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>