force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Special_Required__c.field-meta.xml
<CustomField>
    <fullName>Special_Required__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Special Required</label>
    <type>Checkbox</type>
</CustomField>