force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Special_Required_Date__c.field-meta.xml
<CustomField>
    <fullName>Special_Required_Date__c</fullName>
    <label>Special Required Date</label>
    <type>Date</type>
</CustomField>