force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Stamp__c.field-meta.xml
<CustomField>
    <fullName>Stamp__c</fullName>
    <label>SmartCare</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>