force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Standard_Upright__c.field-meta.xml
<CustomField>
    <fullName>Standard_Upright__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standard Upright</label>
    <type>Checkbox</type>
</CustomField>