force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Steel_Sppt_Structure_provided__c.field-meta.xml
<CustomField>
    <fullName>Steel_Sppt_Structure_provided__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check box if steel support structure provided for each lift system?</inlineHelpText>
    <label>Steel Sppt Structure provided</label>
    <type>Checkbox</type>
</CustomField>