force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Support_Pendants__c.field-meta.xml
<CustomField>
    <fullName>Support_Pendants__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Support Pendants</label>
    <type>Checkbox</type>
</CustomField>