force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Switches__c.field-meta.xml
<CustomField>
    <fullName>Switches__c</fullName>
    <description>Select the preferred type of switch.</description>
    <inlineHelpText>Select the preferred type of switch.</inlineHelpText>
    <label>Switches</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Manual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>