force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/System_Types__c.field-meta.xml
<CustomField>
    <fullName>System_Types__c</fullName>
    <formula>HYPERLINK(&quot;https://hill-rom--hrctest.my.salesforce.com/sfc/p/#E0000000KMt9/a/E00000004g5M/OS3IlfFcz45BBo_hOfbh.2y0TnwLwwv5fv8BtPIx3pA&quot;,&quot;Click to view Image&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Types</label>
    <type>Text</type>
</CustomField>