force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Top_Floor__c.field-meta.xml
<CustomField>
    <fullName>Top_Floor__c</fullName>
    <description>Check box if top floor.</description>
    <inlineHelpText>Check box if top floor.</inlineHelpText>
    <label>Top Floor</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>