force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Training_Consulting__c.field-meta.xml
<CustomField>
    <fullName>Training_Consulting__c</fullName>
    <label>Training/Consulting</label>
    <type>TextArea</type>
</CustomField>