force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Training_Hours_Chart__c.field-meta.xml
<CustomField>
    <fullName>Training_Hours_Chart__c</fullName>
    <formula>HYPERLINK(&quot;https://hill-rom--hrctest.my.salesforce.com/sfc/p/#E0000000KMt9/a/4W000000busY/tnJ7irG2.woOmobs5Fj_0Qc9E3O.kJFFcRhcDV_cmuw&quot;,&quot;Click Here&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Training Hours Chart</label>
    <type>Text</type>
</CustomField>