force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Transfer_Motor__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Motor__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if you require a Transfer Motor.</description>
    <inlineHelpText>Check if you require a Transfer Motor.</inlineHelpText>
    <label>Transfer Motor</label>
    <type>Checkbox</type>
</CustomField>