force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Transfer_Mtr_Traverse__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Mtr_Traverse__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if you require a transfer motor traverse.</description>
    <inlineHelpText>Check if you require a transfer motor traverse.</inlineHelpText>
    <label>Transfer Mtr Traverse</label>
    <type>Checkbox</type>
</CustomField>