force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Tub__c.field-meta.xml
<CustomField>
    <fullName>Tub__c</fullName>
    <label>Tub</label>
    <length>10</length>
    <type>Text</type>
</CustomField>