force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Turntables_Switches__c.field-meta.xml
<CustomField>
    <fullName>Turntables_Switches__c</fullName>
    <label>Turntables/Switches</label>
    <length>50</length>
    <type>Text</type>
</CustomField>