force-app/main/default/objects/AP_and_LIKO_Order_Tracking__c/fields/Type_s_of_Transfers__c.field-meta.xml
<CustomField>
    <fullName>Type_s_of_Transfers__c</fullName>
    <label>Type(s) of Transfers</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Bed to Chair (Dry Sling)</fullName>
            </value>
            <value>
                <fullName>Chair to Tub (Bathing Sling)</fullName>
            </value>
            <value>
                <fullName>Chair to Toilet (Hygiene Sling)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>